# scrat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  license.txt  scrat.dot  scrat.sln  scrat.vcxproj  scrat.vcxproj.filters
Res/: update-target.ps1
Tests/: CMakeLists.txt  Tests.cxx  Tests.h
cxx/: Icons.cxx  accents.fr.cxx  geometry.cxx  object.cxx  rem.cxx  stracc.cxx  text.cxx  textattr.cxx
cxx/encodings/: fmtio.cxx  textattr.cxx
cxx/interpret/: alu.cxx  bloc.cxx  interpret.cxx  segment.cxx  variable.cxx  xio.cxx
cxx/interpret/compiler/: compiler.cxx  grammar.cxx
cxx/io/: ifd.cxx  listener.cxx
cxx/lexer/: lexer.cxx  lexer_color.cxx  tokendata.cxx  types.cxx
cxx/scrater/: alu.cxx  scrater.cxx  xio.cxx
cxx/ui/: console.cxx  painter.cxx  uidefs.cxx  vdc.cxx
cxx/ui/elements/: icon.cxx  label.cxx  text_input.cxx  widget.cxx
impl/Compiler/: TLexer.NumScanner.cxx  TLexer.cxx
impl/Compiler/Lang/: Grammar.cxx  TokenTable.cxx  Tokens.Scrat.Table.cxx
impl/rt/: Components.scrat.cxx  TToken.cxx
include/scrat/: Icons.h  accents.fr.h  cmdargs  cmdargs.h  dlconfig.h  exports.scrat.h  geometry  geometry.h  object  object.h  rem  rem.h  result  result.h  scrat_signals.h  stracc  stracc.h  text  text.h  textattr  textattr.h
include/scrat/Compiler/: TLexer.h
include/scrat/Compiler/Lang/: TokenTable.h
include/scrat/encodings/: fmtio.h  textattr.h
include/scrat/interpret/: alu.h  bloc.h  interpret.h  segment.h  variable.h  xio.h
include/scrat/interpret/compiler/: compiler.h  grammar.h
include/scrat/io/: ifd.h  listener.h
include/scrat/lexer/: lexer.h  lexer_color.h  tokendata.h  types.h
include/scrat/rt/: Components.scrat.h  TToken.h
include/scrat/scrater/: scrater.h  xio.h
include/scrat/ui/: console.h  painter.h  uidefs.h  vdc.h
include/scrat/ui/elements/: icon.h  label.h  text_input.h  widget.h
resources/: expr.scrat
test/: CMakeLists.txt  test.cxx  test.h  test.vcxproj  test.vcxproj.filters
